--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Naan Mudhalvan Project</title> 
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
   *{
     margin: 0;
     padding: 0;
@@ -116,3 +124,41 @@
     background: white;
     color: black;
   }
+       .registration-link {
+        color: black;
+        text-decoration: none;
+      }
+
+      .login-link {
+        color: white;
+        text-decoration: none;
+      }
+ 
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+  </head>
+  <body>
+    <nav>
+      <div class="menu">
+        <div class="logo">
+          <a href="#">Cloud App Development</a>
+        </div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a class="registration-link" href="templates/reg.html">Registration</a></li>
+          <li><a class="login-link" href="login.html">Login</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="img"></div>
+    <div class="center">
+      <div class="title">Home page for Naan Mudhalvan</div>
+      <div class="sub_title">Cloud App Development</div>
+      <p><h2 style="color: white;">Register or login to Go to Profile Page</h2></p>
+      <div class="btns">
+        <a class="registration-link" href="reg.html"><button>Registration</button></a>
+        <a class="login-link" href="login.html"><button>Login</button></a>
+      </div>
+    </div>
+  </body>
+</html>
